<resources>
    <string name="app_name">CGH 構音標記(Phoneme)</string>
    <string name="title_activity_label">LabelActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textFileName">k1_1_1_1.wav</string>
    <string name="textFileNumber">1 / 99</string>
    <string name="textAudio">wav</string>
    <string name="todo">TODO</string>
    <string name="Annotation">Annotation:</string>
    <string name="jumpTo">跳轉至…</string>
    <string name="wordcard03_01">大哭</string>
    <string name="wordcard03_01_1">大</string>
    <string name="wordcard03_01_2">哭</string>
    <string name="wordcard03_02">打鼓</string>
    <string name="wordcard03_02_1">打</string>
    <string name="wordcard03_02_2">鼓</string>
    <string name="wordcard03_03">積木</string>
    <string name="wordcard03_03_1">積</string>
    <string name="wordcard03_03_2">木</string>
    <string name="wordcard03_04">踏步</string>
    <string name="wordcard03_04_1">踏</string>
    <string name="wordcard03_04_2">步</string>
    <string name="wordcard03_05">吉他</string>
    <string name="wordcard03_05_1">吉</string>
    <string name="wordcard03_05_2">他</string>
    <string name="wordcard03_06">哈囉</string>
    <string name="wordcard03_06_1">哈</string>
    <string name="wordcard03_06_2">囉</string>
    <string name="wordcard03_07">內褲</string>
    <string name="wordcard03_07_1">內</string>
    <string name="wordcard03_07_2">褲</string>
    <string name="wordcard03_08">骨頭</string>
    <string name="wordcard03_08_1">骨</string>
    <string name="wordcard03_08_2">頭</string>
    <string name="wordcard04_01">頭髮</string>
    <string name="wordcard04_01_1">頭</string>
    <string name="wordcard04_01_2">髮</string>
    <string name="wordcard04_02">枇杷</string>
    <string name="wordcard04_02_1">枇</string>
    <string name="wordcard04_02_2">杷</string>
    <string name="wordcard04_03">旗子</string>
    <string name="wordcard04_03_1">旗</string>
    <string name="wordcard04_03_2">子</string>
    <string name="wordcard04_04">欺負</string>
    <string name="wordcard04_04_1">欺</string>
    <string name="wordcard04_04_2">負</string>
    <string name="wordcard04_05">擦藥</string>
    <string name="wordcard04_05_1">擦</string>
    <string name="wordcard04_05_2">藥</string>
    <string name="wordcard04_06">草莓</string>
    <string name="wordcard04_06_1">草</string>
    <string name="wordcard04_06_2">莓</string>
    <string name="wordcard04_07">走路</string>
    <string name="wordcard04_07_1">走</string>
    <string name="wordcard04_07_2">路</string>
    <string name="wordcard04fcdp_01">山上</string>
    <string name="wordcard04fcdp_01_1">山</string>
    <string name="wordcard04fcdp_01_2">上</string>
    <string name="wordcard04fcdp_02">綿羊</string>
    <string name="wordcard04fcdp_02_1">綿</string>
    <string name="wordcard04fcdp_02_2">羊</string>
    <string name="wordcard04fcdp_03">聲音</string>
    <string name="wordcard04fcdp_03_1">聲</string>
    <string name="wordcard04fcdp_03_2">音</string>
    <string name="wordcard04fcdp_04">星星</string>
    <string name="wordcard04fcdp_04_1">星</string>
    <string name="wordcard04fcdp_04_2">星</string>
    <string name="wordcard05_01">日歷</string>
    <string name="wordcard05_01_1">日</string>
    <string name="wordcard05_01_2">歷</string>
    <string name="wordcard05_02">蜘蛛</string>
    <string name="wordcard05_02_1">蜘</string>
    <string name="wordcard05_02_2">蛛</string>
    <string name="wordcard05_03">住宿</string>
    <string name="wordcard05_03_1">住</string>
    <string name="wordcard05_03_2">宿</string>
    <string name="wordcard05_04">洗手</string>
    <string name="wordcard05_04_1">洗</string>
    <string name="wordcard05_04_2">手</string>
    <string name="wordcard05_05">抽屜</string>
    <string name="wordcard05_05_1">抽</string>
    <string name="wordcard05_05_2">屜</string>
    <string name="wordcard05_06">下車</string>
    <string name="wordcard05_06_1">下</string>
    <string name="wordcard05_06_2">車</string>
    <string name="wordcard05_07">梳子</string>
    <string name="wordcard05_07_1">梳</string>
    <string name="wordcard05_07_2">子</string>
    <string name="wordcard05_08">吐司</string>
    <string name="wordcard05_08_1">吐</string>
    <string name="wordcard05_08_2">司</string>
    <string name="wordcard04_06_0327">擦子</string>
    <string name="wordcard04_06_1_0327">擦</string>
    <string name="wordcard04_06_2_0327">子</string>
    <string name="wordcard05_05_0327">插手</string>
    <string name="wordcard05_05_1_0327">插</string>
    <string name="wordcard05_05_2_0327">手</string>
    <string name="wordcard05_06_0327">吸</string>
    <string name="wordcard05_06_1_0327">吸</string>
    <string name="wordcard05_07_0327">車</string>
    <string name="wordcard05_07_1_0327">車</string>
    <string name="wordcard05_08_0327">四</string>
    <string name="wordcard05_08_1_0327">四</string>
    <string name="oldword01_1">布丁</string>
    <string name="oldword01_2">麵包</string>
    <string name="oldword01_3">大白菜</string>
    <string name="oldword02_1">螃蟹</string>
    <string name="oldword02_2">奶瓶</string>
    <string name="oldword02_3">蓮蓬頭</string>
    <string name="oldword03_1">帽子</string>
    <string name="oldword03_2">玉米</string>
    <string name="oldword03_3">捉迷藏</string>
    <string name="oldword04_1">鳳梨</string>
    <string name="oldword04_2">衣服</string>
    <string name="oldword04_3">吹風機</string>
    <string name="oldword05_1">動物</string>
    <string name="oldword05_2">蝴蝶</string>
    <string name="oldword05_3">看電視</string>
    <string name="oldword06_1">太陽</string>
    <string name="oldword06_2">枕頭</string>
    <string name="oldword06_3">一條魚</string>
    <string name="oldword07_1">鈕扣</string>
    <string name="oldword07_2">電腦</string>
    <string name="oldword07_3">喝奶昔</string>
    <string name="oldword08_1">老虎</string>
    <string name="oldword08_2">恐龍</string>
    <string name="oldword08_3">養樂多</string>
    <string name="oldword09_1">果凍</string>
    <string name="oldword09_2">烏龜</string>
    <string name="oldword09_3">去公園</string>
    <string name="oldword10_1">筷子</string>
    <string name="oldword10_2">貝殼</string>
    <string name="oldword10_3">巧克力</string>
    <string name="oldword11_1">漢堡</string>
    <string name="oldword11_2">大海</string>
    <string name="oldword11_3">救護車</string>
    <string name="oldword12_1">膠帶</string>
    <string name="oldword12_2">果醬</string>
    <string name="oldword12_3">指甲刀</string>
    <string name="oldword13_1">鉛筆</string>
    <string name="oldword13_2">鋼琴</string>
    <string name="oldword13_3">中秋節</string>
    <string name="oldword14_1">信封</string>
    <string name="oldword14_2">點心</string>
    <string name="oldword14_3">口香糖</string>
    <string name="oldword15_1">站牌</string>
    <string name="oldword15_2">蠟燭</string>
    <string name="oldword15_3">擦桌子</string>
    <string name="oldword16_1">抽屜</string>
    <string name="oldword16_2">警察</string>
    <string name="oldword16_3">柳橙汁</string>
    <string name="oldword17_1">閃電</string>
    <string name="oldword17_2">牙刷</string>
    <string name="oldword17_3">直升機</string>
    <string name="oldword18_1">日曆</string>
    <string name="oldword18_2">超人</string>
    <string name="oldword18_3">大榕樹</string>
    <string name="oldword19_1">走路</string>
    <string name="oldword19_2">洗澡</string>
    <string name="oldword19_3">水族箱</string>
    <string name="oldword20_1">草莓</string>
    <string name="oldword20_2">洋蔥</string>
    <string name="oldword20_3">上廁所</string>
    <string name="oldword21_1">掃把</string>
    <string name="oldword21_2">垃圾</string>
    <string name="oldword21_3">去散步</string>
    <string name="oldword22_1">鈕扣</string>
    <string name="oldword22_2">果醬</string>
    <string name="oldword22_3">指甲刀</string>
    <string name="oldword23_1">筷子</string>
    <string name="oldword23_2">烏龜</string>
    <string name="oldword23_3">去公園</string>
    <string name="oldword24_1">杜鵑花</string>
    <string name="oldword24_2">選擇</string>
    <string name="oldword24_3">缺點</string>
    <string name="oldword29_1">太陽</string>
    <string name="oldword29_2">大海</string>
    <string name="oldword29_3">喝奶昔</string>
    <string name="oldword30_1">草莓</string>
    <string name="oldword30_2">貝殼</string>
    <string name="oldword30_3">水族箱</string>
    <string name="oldword31_1">帽子</string>
    <string name="oldword31_2">麵包</string>
    <string name="oldword31_3">一條魚</string>
    <string name="oldword32_1">鈕扣</string>
    <string name="oldword32_2">枕頭</string>
    <string name="oldword32_3">中秋節</string>
    <string name="oldword33_1">漢堡</string>
    <string name="oldword33_2">電腦</string>
    <string name="oldword33_3">看電視</string>
    <string name="oldword34_1">信封</string>
    <string name="oldword34_2">鋼琴</string>
    <string name="oldword34_3">點心</string>
    <string name="oldword35_1">螃蟹</string>
    <string name="oldword35_2">果醬</string>
    <string name="oldword35_3">口香糖</string>
    <string name="oldword36_1">鳳梨</string>
    <string name="oldword36_2">奶瓶</string>
    <string name="oldword36_3">蓮蓬頭</string>
    <string name="wordcardStopping_01">杯子</string>
    <string name="wordcardStopping_01_1">杯</string>
    <string name="wordcardStopping_01_2">子</string>
    <string name="wordcardStopping_02">不是</string>
    <string name="wordcardStopping_02_1">不</string>
    <string name="wordcardStopping_02_2">是</string>
    <string name="wordcardStopping_03">背包</string>
    <string name="wordcardStopping_03_1">背</string>
    <string name="wordcardStopping_03_2">包</string>
    <string name="wordcardStopping_04">抹布</string>
    <string name="wordcardStopping_04_1">抹</string>
    <string name="wordcardStopping_04_2">布</string>
    <string name="wordcardStopping_05">毛筆</string>
    <string name="wordcardStopping_05_1">毛</string>
    <string name="wordcardStopping_05_2">筆</string>
    <string name="wordcardStopping_06">拍手</string>
    <string name="wordcardStopping_06_1">拍</string>
    <string name="wordcardStopping_06_2">手</string>
    <string name="wordcardStopping_07">皮帶</string>
    <string name="wordcardStopping_07_1">皮</string>
    <string name="wordcardStopping_07_2">帶</string>
    <string name="wordcardStopping_08">屁股</string>
    <string name="wordcardStopping_08_1">屁</string>
    <string name="wordcardStopping_08_2">股</string>
    <string name="wordcardStopping_09">瀑布</string>
    <string name="wordcardStopping_09_1">瀑</string>
    <string name="wordcardStopping_09_2">布</string>
    <string name="wordcardStopping_10">跑步</string>
    <string name="wordcardStopping_10_1">跑</string>
    <string name="wordcardStopping_10_2">步</string>
    <string name="wordcardStopping_11">底片</string>
    <string name="wordcardStopping_11_1">底</string>
    <string name="wordcardStopping_11_2">片</string>
    <string name="wordcardStopping_12">載帽子</string>
    <string name="wordcardStopping_12_1">載</string>
    <string name="wordcardStopping_12_2">帽</string>
    <string name="wordcardStopping_12_3">子</string>
    <string name="wordcardStopping_13">口袋</string>
    <string name="wordcardStopping_13_1">口</string>
    <string name="wordcardStopping_13_2">袋</string>
    <string name="wordcardStopping_14">蝴蝶</string>
    <string name="wordcardStopping_14_1">蝴</string>
    <string name="wordcardStopping_14_2">蝶</string>
    <string name="wordcardStopping_15">大哥</string>
    <string name="wordcardStopping_15_1">大</string>
    <string name="wordcardStopping_15_2">哥</string>
    <string name="wordcardStopping_16">兔子</string>
    <string name="wordcardStopping_16_1">兔</string>
    <string name="wordcardStopping_16_2">子</string>
    <string name="wordcardStopping_17">拖把</string>
    <string name="wordcardStopping_17_1">拖</string>
    <string name="zero">0:00</string>
</resources>