<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LabelActivity">

    <TextView
        android:id="@+id/textFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/textFileName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textClassName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/textClassName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFileName" />

    <TextView
        android:id="@+id/textClassName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:text="@string/Annotation"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPhoneme"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textFileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textFileNumber"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/jumpTo"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFileNumber" />

    <TextView
        android:id="@+id/textViewSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Playback Speed:"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/speedOptions"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/speedOptions" />

    <Spinner
        android:id="@+id/speedOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@+id/textViewSpeed"
        app:layout_constraintTop_toBottomOf="@+id/textClassName" />

    <TextView
        android:id="@+id/textViewPhoneme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text=""
        android:textColor="#EF476F"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedOptions" />


    <ImageButton
        android:id="@+id/imageBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_backspace_24"
        android:contentDescription="delte"

        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewPhoneme"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPhoneme"/>

    <View
        android:id="@+id/viewLine"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#888686"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPhoneme"/>


    <!--    <ScrollView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:padding="5dp"-->
    <!--        android:scrollbars="vertical"-->
    <!--        app:layout_constraintBottom_toTopOf="@+id/playerSeekBar"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView">-->

    <!--    </ScrollView>-->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/playerSeekBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLine">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/outlinedButton_ph"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="56dp"
                android:layout_height="56dp"


                android:text="ph"
                android:textAllCaps="false"
                android:textColor="#EF476F"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/outlinedButton_m"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/outlinedButton_m"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:text="m"
                android:textAllCaps="false"
                android:textColor="#EF476F"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/outlinedButton_ph"
                app:layout_constraintEnd_toStartOf="@+id/outlinedButton_t"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/outlinedButton_ph"
                tools:layout_editor_absoluteY="0dp" />


            <Button
                android:id="@+id/outlinedButton_t"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:text="t"
                android:textAllCaps="false"
                android:textColor="#EF476F"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/outlinedButton_ph"
                app:layout_constraintEnd_toStartOf="@+id/outlinedButton_f"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/outlinedButton_m"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/outlinedButton_f"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:text="f"
                android:textAllCaps="false"
                android:textColor="#EF476F"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/outlinedButton_ph"
                app:layout_constraintEnd_toStartOf="@+id/outlinedButton_k"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/outlinedButton_t"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/outlinedButton_k"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:text="k"
                android:textAllCaps="false"
                android:textColor="#EF476F"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/outlinedButton_ph"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/outlinedButton_f"
                tools:layout_editor_absoluteY="0dp" />

            <Button
                android:id="@+id/btnDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Dialog"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outlinedButton_ph" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="phone1"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnDialog">

                <AutoCompleteTextView
                    android:id="@+id/phone1_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="phone2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/phone2_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Type"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                <AutoCompleteTextView
                    android:id="@+id/error_type_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPrevious"
        app:layout_constraintEnd_toStartOf="@+id/buttonNext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPrevious"
        app:layout_constraintTop_toTopOf="@+id/buttonPrevious"
        app:srcCompat="@drawable/ic_baseline_play_arrow_24"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonPrevious"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_replay_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/buttonNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonNext"
        app:layout_constraintTop_toTopOf="@+id/buttonNext"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_save_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/buttonReset"
        app:layout_constraintEnd_toStartOf="@+id/buttonPlay"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonReset"
        app:layout_constraintTop_toTopOf="@+id/buttonReset"
        app:srcCompat="@drawable/ic_baseline_skip_previous_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/buttonPlay"
        app:layout_constraintEnd_toStartOf="@+id/buttonSave"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonPlay"
        app:layout_constraintTop_toTopOf="@+id/buttonPlay"
        app:srcCompat="@drawable/ic_baseline_skip_next_24" />

    <TextView
        android:id="@+id/textCurrentTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="24dp"
        android:text="@string/zero"
        android:textColor="#212121"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonReset"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/playerSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="@+id/textCurrentTime"
        app:layout_constraintEnd_toStartOf="@+id/textTotalDuration"
        app:layout_constraintStart_toEndOf="@+id/textCurrentTime"
        app:layout_constraintTop_toTopOf="@+id/textCurrentTime" />

    <TextView
        android:id="@+id/textTotalDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/zero"
        android:textColor="#212121"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/playerSeekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/playerSeekBar" />


</androidx.constraintlayout.widget.ConstraintLayout>